src/minijava1.0.jj
PARSER_BEGIN(MiniJavaParser)

import java.io.*;

/**
 * Grammar to parse MiniJava language 
 * @author Christopher Teljstedt and Carl Eriksson 
 */
public class MiniJavaParser
{

public MiniJavaParser (String fileName){
	this(System.in);
    try { ReInit(new FileInputStream(new File(fileName))); }
    catch(Exception e) { e.printStackTrace(); }
}

public static void main(String args[]) {
	MiniJavaParser parser;
	if (args.length == 0) {
		System.out.println("MiniJavac 1.0:  Reading from standard input . . .");
		parser = new MiniJavaParser(System.in);
	} else if (args.length == 1) {
		System.out.println("MiniJavac 1.0:  Reading from file " + args[0] + " . . .");
		try {
			parser = new MiniJavaParser(new java.io.FileInputStream(args[0]));
		} catch (java.io.FileNotFoundException e) {
			System.out.println("MiniJavac 1.0: File " + args[0] + " not found.");
			return;
		}
	} else {
		System.out.println("MiniJavac 1.0:  Usage is one of:");
		System.out.println("         java JavaParser < inputfile");
		System.out.println("OR");
		System.out.println("         java JavaParser inputfile");
		return;
	}
	try {
		parser.CompilationUnit();
		System.out.println("MiniJavac 1.0: Java program parsed successfully.");
	} catch (ParseException e) {
		System.out.println(e.getMessage());
		System.out.println("MiniJavac 1.0: Encountered errors during parse.");
	}
}
}
PARSER_END(MiniJavaParser)

/* WHITE SPACE */

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
| "\f"
}



/* RESERVED WORDS AND LITERALS */

TOKEN :
{
  < BOOLEAN: "boolean" >
| < CLASS: "class" >
| < ELSE: "else" >
| < FALSE: "false" >
| < IF: "if" >
| < INT: "int" >
| < LONG: "long" >
| < NEW: "new" >
| < PUBLIC: "public" >
| < RETURN: "return" >
| < STATIC: "static" >
| < THIS: "this" >
| < TRUE: "true" >
| < VOID: "void" >
| < WHILE: "while" >
| < LENGTH: "length" >
| < STRING: "String" >
| < MAIN: "main" >
| < SYSOUT_PRINTLN : "System.out.println" >
}

/* LITERALS */
/*	
	int lit := 0 | [1-9][0-9]*
	long lit := 0[lL] | [1-9][0-9]*[lL]	
*/

TOKEN :
{
  < INTEGER_LITERAL:
  	["1"-"9"] (["0"-"9"])*
  >
}

/* IDENTIFIERS */

TOKEN :
{	//	id := [a-zA-Z ][a-zA-Z0-9 ]*
  < IDENTIFIER: <LETTER> (<PART_LETTER>)* >
|
  < #LETTER:
      [
         "A"-"Z",
         "_",
         "a"-"z"
      ]
  >
|
  < #PART_LETTER:
      [
      	 "0"-"9",
         "A"-"Z",
         "_",
         "a"-"z"
      ]
  >
}



/* SEPARATORS */

TOKEN :
{
  < LPAREN: "(" >
| < RPAREN: ")" >
| < LBRACE: "{" >
| < RBRACE: "}" >
| < LBRACKET: "[" >
| < RBRACKET: "]" >
| < SEMICOLON: ";" >
| < COMMA: "," >
| < DOT: "." >
}

/* OPERATORS */

TOKEN :
{
  < ASSIGN: "=" >
| < LT: "<" >
//| < EQ: "==" > /* Bonus 1p */
//| < LE: "<=" > /* Bonus 1p */
//| < GE: ">=" > /* Bonus 1p */
//| < NE: "!=" > /* Bonus 1p */
//| < SC_OR: "||" > /* Bonus 2p */
| < SC_AND: "&&" >
| < PLUS: "+" >
| < MINUS: "-" >
| < STAR: "*" >
}



/**********************************************
 * THE MINI JAVA LANGUAGE GRAMMAR STARTS HERE *
 **********************************************/

/*
 * Program structuring syntax follows.
 */

void CompilationUnit():
{}
{
  MainDeclaration() ( ClassDeclaration() )*
  <EOF>
}
/*
 * Declaration syntax follows.
 */

void MainDeclaration():
{}
{
  ";"
|	
  ( "class" )
  <IDENTIFIER>
  MainBody()
}

void ClassDeclaration():
{}
{
  ";"
|	
  ( "class" )
  <IDENTIFIER>
  ClassBody()
}

void MainBody():
{}
{
  "{" MainBodyDeclaration() "}"
}

void MainBodyDeclaration():
{}
{
  <PUBLIC> <STATIC> <VOID> <MAIN> "(" <STRING> "[" "]" <IDENTIFIER> ")" MainBlock()
}

void ClassBody():
{}
{
  "{" ClassBodyDeclaration() "}"
}

void ClassBodyDeclaration():
{}
{
	LOOKAHEAD( VariableDeclaration() )
   ( VariableDeclaration() )*
|
	LOOKAHEAD( MethodDeclaration() )
   ( MethodDeclaration() )*
|
  ";"
}

void VariableDeclaration():
{}
{
  Type() <IDENTIFIER> ";"
}


void MethodDeclaration():
{}
{
  "public"
  Type()
  MethodDeclarator()
  ( ClassBlock() | ";" )
}

void MethodDeclarator():
{}
{
  <IDENTIFIER> FormalList()
}

void FormalList():
{}
{
  "(" [ FormalRest() ( "," FormalRest() )* ] ")"
}

void FormalRest():
{}
{
  Type() <IDENTIFIER>
}

/*
 * Type, name and expression syntax follows.
 */

void Type():
{}
{
   LOOKAHEAD(2) ReferenceType()
 |
   PrimitiveType()
}

void ReferenceType():
{}
{
   PrimitiveTypeArray() ( LOOKAHEAD(2) "[" "]" )+
}


void PrimitiveTypeArray():
{}
{
  "int"
}

void PrimitiveType():
{}
{
  "boolean"
|
  "int"
}

void ResultType():
{}
{
  "void"
|
  Type()
}
/*
 * Statement syntax follows.
 */

void AssignmentOperator():
{}
{
	"="
}

void Operator():
{}
{
	ConditionalAndExpression()
|
// 	EqualityExpression()
// |
	RelationalExpression()
|
	UnaryExpression()
}

void ConditionalAndExpression():
{}
{
	"&&"
}

void RelationalExpression():
{}
{
	"<"
}

void UnaryExpression():
{}
{
	"+"
|
	"-"
}

// void EqualityExpression():
// {}
// {
//   "==" 
// | 
//   "!=" 
// }



/*
 * Statement syntax follows.
 */

void Statement():
{}
{
  "{" ( Statement() )* "}"
|
  IfStatement()
|
  WhileStatement() 
|
  <SYSOUT_PRINTLN> "(" Expression() ")" ";"
|
  LOOKAHEAD(2)
  <IDENTIFIER> AssignmentOperator() Expression() ";"
|
  LOOKAHEAD(2)
  <IDENTIFIER> "[" Expression() "]" AssignmentOperator() Expression() ";"
}

void MainBlock():
{}
{
  "{" 
  ( LOOKAHEAD( Type() <IDENTIFIER> ) VariableDeclaration() )* 
  ( Statement() )* 
  "}"
}

void ClassBlock():
{}
{
  "{" 
  ( LOOKAHEAD( Type() <IDENTIFIER> ) 
  VariableDeclaration() )* 
  ( Statement() )*  
  ReturnStatement() 
  "}"
}

void IfStatement():
/*
 * The disambiguating algorithm of JavaCC automatically binds dangling
 * else's to the innermost if statement.  The LOOKAHEAD specification
 * is to tell JavaCC that we know what we are doing.
 */
{}
{
  "if" "(" Expression() ")" Statement() [ LOOKAHEAD(1) "else" Statement() ]
}

void WhileStatement():
{}
{
  "while" "(" Expression() ")" Statement()
}

void ReturnStatement():
{}
{
  "return" Expression() ";"
}

/*
 * Expression syntax follows.
 */

void Expression():
/*
 * This expansion has been written with 3 lookahead,
 * can be performance issues, maybe try 2 lookahead. 
 */
{}
{
    LOOKAHEAD(3)
    Operator() Expression()
|
    LOOKAHEAD(2)
	"[" Expression() "]"
|
    LOOKAHEAD(3)
	"." <LENGTH>
|
    LOOKAHEAD(3)
	"." <IDENTIFIER> ExpressionList()
|
	Literal()
|
	<IDENTIFIER>
|
	<THIS>	
|	
    LOOKAHEAD(2)
	<NEW> <INT> "[" Expression() "]"
|
    LOOKAHEAD(2)
	<NEW> <IDENTIFIER>  "[" Expression() "]"
|
	"!" Expression()
|
	"(" Expression() ")"
}

void ExpressionList():
/*
 * This expansion has been written with 3 lookahead,
 * can be performance issues, maybe try 2 lookahead. 
 */
{}
{
	"(" [ Expression() ( ExpressionRest() )* ] ")"
}

void ExpressionRest():
{}
{
	"," Expression()
}


void Literal():
{}
{
  <INTEGER_LITERAL>
|
  BooleanLiteral()
}

void BooleanLiteral():
{}
{
  "true"
|
  "false"
}
